[gd_scene load_steps=15 format=3 uid="uid://nu7p0kg0jvd6"]

[ext_resource type="Script" path="res://menus/results_overlay.gd" id="1_bbuyh"]
[ext_resource type="AudioStream" uid="uid://ceiob0ihr5jtu" path="res://menus/assets/songs/NCS_BGM_MINIOVER.ogg" id="2_7d885"]
[ext_resource type="FontFile" uid="uid://c23xy5g5o4kv" path="res://menus/assets/theme_resources/super_mario_DS.ttf" id="2_p75an"]
[ext_resource type="Theme" uid="uid://c45u3bs2vsb7a" path="res://menus/assets/theme_resources/plain.tres" id="4_kgo0j"]
[ext_resource type="FontFile" uid="uid://cyv5rrm616cq8" path="res://menus/assets/theme_resources/sheet_font_numbers.png" id="5_mtb8q"]

[sub_resource type="Gradient" id="Gradient_kcneg"]
offsets = PackedFloat32Array(0.323529, 0.887255)
colors = PackedColorArray(0.319664, 0.110352, 0.441406, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wtg0f"]
gradient = SubResource("Gradient_kcneg")

[sub_resource type="Animation" id="Animation_mhp4q"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverTitle:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverTitle:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverTitle:self_modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverTitle:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameOverTitle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScoreboardTitle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelScoreboard:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yrwvm"]
resource_name = "in"
length = 2.5
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_7d885")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverTitle:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.1, -0.00454283, 1, 0, 0.98515, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverTitle:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2, -0.25, 0, 0.1, 0.00576472, 1, 0, 0.995457, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverTitle:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.419608, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameOverTitle:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GameOverTitle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ScoreboardTitle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_5wv5v"]
resource_name = "wait_hidden"
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverTitle:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.1, -0.00454283),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameOverTitle:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2, -0.25, 0, 0.1, 0.00576472),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameOverTitle:self_modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.419608, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverTitle:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GameOverTitle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ScoreboardTitle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PanelScoreboard:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m24k6"]
_data = {
"RESET": SubResource("Animation_mhp4q"),
"in": SubResource("Animation_yrwvm"),
"wait_hidden": SubResource("Animation_5wv5v")
}

[sub_resource type="Gradient" id="Gradient_l6d1c"]
offsets = PackedFloat32Array(0.392157, 0.882353)
colors = PackedColorArray(0.765625, 0.158508, 0.158508, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lph43"]
gradient = SubResource("Gradient_l6d1c")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fohiw"]

[node name="ResultsOverlay" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(360, 360)
script = ExtResource("1_bbuyh")

[node name="GameOverTitle" type="RichTextLabel" parent="."]
light_mask = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 0.177556
anchor_right = 1.0
anchor_bottom = 0.277556
offset_top = 0.159988
offset_right = 8.0
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(364, 36)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/normal_font = ExtResource("2_p75an")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[shake rate=14 level=20][center]%placeholder%"
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="PointLight2D" type="PointLight2D" parent="GameOverTitle"]
position = Vector2(360, 26)
rotation = 4.71239
scale = Vector2(0.635576, 1176.22)
energy = 2.13
blend_mode = 2
range_item_cull_mask = 2
texture = SubResource("GradientTexture1D_wtg0f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "wait_hidden"
libraries = {
"": SubResource("AnimationLibrary_m24k6")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="ScoreboardTitle" type="Label" parent="."]
light_mask = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -5.0
offset_right = 96.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(364, 36)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 30
text = "Scoreboard"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[node name="PointLight2D" type="PointLight2D" parent="ScoreboardTitle"]
position = Vector2(101, 13)
rotation = -1.5708
scale = Vector2(0.401201, 1176.22)
energy = 2.13
blend_mode = 2
range_item_cull_mask = 4
texture = SubResource("GradientTexture1D_lph43")

[node name="PanelScoreboard" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.255556
anchor_top = 0.956
anchor_right = 0.744
anchor_bottom = 0.956
offset_left = -1.52588e-05
offset_top = -296.32
offset_right = -175.68
offset_bottom = -148.32
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fohiw")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelScoreboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_kgo0j")
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 24

[node name="VBoxContainer" type="VBoxContainer" parent="PanelScoreboard/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelScoreboard/MarginContainer/VBoxContainer" groups=["ScoreboardEntry"]]
layout_mode = 2

[node name="LabelStarhint" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 0.913725, 0, 1)
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "abcd"
vertical_alignment = 1

[node name="LabelScoreBig" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelScoreboard/MarginContainer/VBoxContainer" groups=["ScoreboardEntry"]]
layout_mode = 2

[node name="LabelStarhint" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 0.913725, 0, 1)
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "abcd"
vertical_alignment = 1

[node name="LabelScoreBig" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelScoreboard/MarginContainer/VBoxContainer" groups=["ScoreboardEntry"]]
layout_mode = 2

[node name="LabelStarhint" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer3"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 0.913725, 0, 1)
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "abcd"
vertical_alignment = 1

[node name="LabelScoreBig" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer3"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelScoreboard/MarginContainer/VBoxContainer" groups=["ScoreboardEntry"]]
layout_mode = 2

[node name="LabelStarhint" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer4"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 0.913725, 0, 1)
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "abcd"
vertical_alignment = 1

[node name="LabelScoreBig" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer4"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelScoreboard/MarginContainer/VBoxContainer" groups=["ScoreboardEntry"]]
layout_mode = 2

[node name="LabelStarhint" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer5"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 0.913725, 0, 1)
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "abcd"
vertical_alignment = 1

[node name="LabelScoreBig" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer5"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer" type="HBoxContainer" parent="PanelScoreboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/Spacer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="NoTopEntry" type="HBoxContainer" parent="PanelScoreboard/MarginContainer/VBoxContainer" groups=["ScoreboardEntry"]]
layout_mode = 2

[node name="LabelStarhint" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/NoTopEntry"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 0.913725, 0, 1)
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "abcd"
vertical_alignment = 1

[node name="LabelScoreBig" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/NoTopEntry"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_p75an")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LabelScore" type="Label" parent="PanelScoreboard/MarginContainer/VBoxContainer/NoTopEntry"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_mtb8q")
text = "0"
horizontal_alignment = 2
vertical_alignment = 1
